first pass at pwa implementation

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^5.0.3",
+    "vite-plugin-pwa": "^0.17.4",
     "vue": "^3.3.13"
   },
   "devDependencies": {
